--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.16.2",
     "bcrypt==3.2.0",
+    "dependency-injector>=4.48.1",
     "fastapi>=0.115.13",
     "mysqlclient>=2.2.7",
     "passlib[bcrypt]>=1.7.4",
