--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "mysqlclient>=2.2.7",
     "passlib[bcrypt]>=1.7.4",
     "py-ulid>=1.0.3",
+    "pydantic[email]>=2.11.7",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
 ]
