--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "mysqlclient>=2.2.7",
     "passlib[bcrypt]>=1.7.4",
     "py-ulid>=1.0.3",
+    "pydantic-settings>=2.10.1",
     "pydantic[email]>=2.11.7",
+    "python-dotenv>=1.1.1",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.41",
